Fix small css spacing problem

--- a/frontend/src/app/organizations/organizations.component.css
+++ b/frontend/src/app/organizations/organizations.component.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-left: 10px;
+    margin-left: 10px;
     margin-right: 5px;
 }
 
